--- a/go-service-caller/.choreo/component.yaml
+++ b/go-service-caller/.choreo/component.yaml
@@ -42,4 +42,4 @@ endpoints:
     # Defaults to wildcard route if not specified.
     # This is only applicable to REST endpoint types.
     # The path should be relative to the docker context.
-    schemaFilePath: docs/openapi.yaml
+    schemaFilePath: openapi.yaml
